--- a/src/components/TimelineView.module.css
+++ b/src/components/TimelineView.module.css
@@ -86,7 +86,7 @@
 }
 
 .eventRow + .subItem {
-  margin-top: 5px;
+  margin-top: 0;
 }
 
 .subItem + .subItem {
@@ -231,14 +231,14 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 2px 18px 2px 7px;
+  padding: 3px 18px 3px 7px;
   margin-top: 2px;
   margin-bottom: 2px;
   margin-left: 0px;
   background-color: #FFFFFF;
   border-radius: var(--radius-md, 8px);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-  min-height: 26px;
+  min-height: 28px;
 }
 
 .subItemDone {
